Documents/compiladores/Drawme/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> PR p2 p3 main mainVDir block
Rule 2     main -> MAIN
Rule 3     mainVDir -> vars
Rule 4     p2 -> globals
Rule 5     p2 -> empty
Rule 6     p3 -> functions p3
Rule 7     p3 -> empty
Rule 8     globals -> glob vars
Rule 9     glob -> GL
Rule 10    functions -> fun2 DP funVDir block
Rule 11    funVDir -> vars
Rule 12    fun2 -> funBlock ID LP fun3 RP
Rule 13    funBlock -> FUN
Rule 14    fun3 -> fun5 fun4
Rule 15    fun3 -> empty
Rule 16    fun4 -> C fun5 fun4
Rule 17    fun4 -> empty
Rule 18    fun5 -> type ID
Rule 19    vars -> V var2 var5
Rule 20    vars -> empty
Rule 21    var2 -> type var3 SC var2
Rule 22    var2 -> empty
Rule 23    var3 -> ID var4 var33
Rule 24    var33 -> C ID var4 var33
Rule 25    var33 -> empty
Rule 26    var4 -> EQ exp
Rule 27    var4 -> empty
Rule 28    var5 -> list var5
Rule 29    var5 -> empty
Rule 30    type -> INT
Rule 31    type -> FLOAT
Rule 32    val -> VALI
Rule 33    val -> VALF
Rule 34    position -> PENP LP exp C exp RP SC
Rule 35    colors -> PENC LP exp C exp C exp RP SC
Rule 36    colors -> SETC LP exp C exp C exp RP SC
Rule 37    colors -> BACO LP exp C exp C exp RP SC
Rule 38    p_width -> PENW LP exp RP SC
Rule 39    penwrite -> PENU SC
Rule 40    penwrite -> PEND SC
Rule 41    move -> F mueve2
Rule 42    move -> B mueve2
Rule 43    mueve2 -> LP exp C A exp RP SC
Rule 44    rect -> REC LP exp C exp p_fill RP SC
Rule 45    p_fill -> C FILL
Rule 46    p_fill -> empty
Rule 47    tria -> TRI LP exp C exp C exp p_fill RP SC
Rule 48    one_par -> CIR LP exp p_fill RP SC
Rule 49    one_par -> SQ LP exp p_fill RP SC
Rule 50    poly -> POL LP idList p_fill RP SC
Rule 51    lstrip -> LS LP idList RP SC
Rule 52    idList -> ID
Rule 53    p_arc -> ARC LP exp RP SC
Rule 54    expresion -> exp ex2
Rule 55    ex2 -> ex3 exp
Rule 56    ex2 -> empty
Rule 57    ex3 -> LT
Rule 58    ex3 -> MT
Rule 59    ex3 -> D
Rule 60    ex3 -> SEQ
Rule 61    exp -> term exp2
Rule 62    exp2 -> exp3 exp
Rule 63    exp2 -> empty
Rule 64    exp3 -> ADD
Rule 65    exp3 -> SUB
Rule 66    term -> fact term2
Rule 67    term2 -> term3 term
Rule 68    term2 -> empty
Rule 69    term3 -> M
Rule 70    term3 -> DIV
Rule 71    fact -> fact2 exp RP
Rule 72    fact -> fact4
Rule 73    fact2 -> LP
Rule 74    fact4 -> valExp
Rule 75    fact4 -> ID
Rule 76    valExp -> VALI
Rule 77    valExp -> VALF
Rule 78    rep -> RE rep3 block
Rule 79    rep3 -> exp
Rule 80    WID -> ID WID2
Rule 81    WID2 -> assigment
Rule 82    WID2 -> funCall
Rule 83    assigment -> EQ tipeAss
Rule 84    tipeAss -> varAss
Rule 85    tipeAss -> listAss
Rule 86    varAss -> exp SC
Rule 87    funCall -> LP func2 RP SC
Rule 88    func2 -> func4 func3
Rule 89    func2 -> empty
Rule 90    func3 -> C func4 func3
Rule 91    func3 -> empty
Rule 92    func4 -> exp
Rule 93    list -> L type ID prelistAss
Rule 94    prelistAss -> EQ listAss
Rule 95    prelistAss -> SC
Rule 96    listAss -> LB lista3 RB SC
Rule 97    lista2 -> val
Rule 98    lista2 -> ID
Rule 99    lista3 -> lista2 li4
Rule 100   li4 -> C lista2 li4
Rule 101   li4 -> empty
Rule 102   lab -> LA LP stExp lab2 RP SC
Rule 103   lab2 -> ADD stExp lab2
Rule 104   lab2 -> empty
Rule 105   stExp -> STR
Rule 106   stExp -> exp
Rule 107   condition -> IF LP expresion condRP block con2
Rule 108   condRP -> RP
Rule 109   con2 -> empty
Rule 110   con2 -> con3 block
Rule 111   con3 -> ELSE
Rule 112   block -> LB block3 RB
Rule 113   block3 -> block2 block3
Rule 114   block3 -> empty
Rule 115   figure -> rect
Rule 116   figure -> tria
Rule 117   figure -> poly
Rule 118   figure -> lstrip
Rule 119   figure -> one_par
Rule 120   figure -> p_arc
Rule 121   pen -> colors
Rule 122   pen -> p_width
Rule 123   pen -> move
Rule 124   pen -> position
Rule 125   pen -> penwrite
Rule 126   block2 -> figure
Rule 127   block2 -> condition
Rule 128   block2 -> pen
Rule 129   block2 -> lab
Rule 130   block2 -> list
Rule 131   block2 -> WID
Rule 132   block2 -> rep
Rule 133   empty -> <empty>

Terminals, with rules where they appear

A                    : 43
ADD                  : 64 103
ARC                  : 53
B                    : 42
BACO                 : 37
C                    : 16 24 34 35 35 36 36 37 37 43 44 45 47 47 90 100
CIR                  : 48
D                    : 59
DIV                  : 70
DP                   : 10
ELSE                 : 111
EQ                   : 26 83 94
F                    : 41
FILL                 : 45
FLOAT                : 31
FUN                  : 13
GL                   : 9
ID                   : 12 18 23 24 52 75 80 93 98
IF                   : 107
INT                  : 30
L                    : 93
LA                   : 102
LB                   : 96 112
LP                   : 12 34 35 36 37 38 43 44 47 48 49 50 51 53 73 87 102 107
LS                   : 51
LT                   : 57
M                    : 69
MAIN                 : 2
MT                   : 58
PENC                 : 35
PEND                 : 40
PENP                 : 34
PENU                 : 39
PENW                 : 38
POL                  : 50
PR                   : 1
RB                   : 96 112
RE                   : 78
REC                  : 44
RP                   : 12 34 35 36 37 38 43 44 47 48 49 50 51 53 71 87 102 108
SC                   : 21 34 35 36 37 38 39 40 43 44 47 48 49 50 51 53 86 87 95 96 102
SEQ                  : 60
SETC                 : 36
SQ                   : 49
STR                  : 105
SUB                  : 65
TRI                  : 47
V                    : 19
VALF                 : 33 77
VALI                 : 32 76
error                : 

Nonterminals, with rules where they appear

WID                  : 131
WID2                 : 80
assigment            : 81
block                : 1 10 78 107 110
block2               : 113
block3               : 112 113
colors               : 121
con2                 : 107
con3                 : 110
condRP               : 107
condition            : 127
empty                : 5 7 15 17 20 22 25 27 29 46 56 63 68 89 91 101 104 109 114
ex2                  : 54
ex3                  : 55
exp                  : 26 34 34 35 35 35 36 36 36 37 37 37 38 43 43 44 44 47 47 47 48 49 53 54 55 62 71 79 86 92 106
exp2                 : 61
exp3                 : 62
expresion            : 107
fact                 : 66
fact2                : 71
fact4                : 72
figure               : 126
fun2                 : 10
fun3                 : 12
fun4                 : 14 16
fun5                 : 14 16
funBlock             : 12
funCall              : 82
funVDir              : 10
func2                : 87
func3                : 88 90
func4                : 88 90
functions            : 6
glob                 : 8
globals              : 4
idList               : 50 51
lab                  : 129
lab2                 : 102 103
li4                  : 99 100
list                 : 28 130
listAss              : 85 94
lista2               : 99 100
lista3               : 96
lstrip               : 118
main                 : 1
mainVDir             : 1
move                 : 123
mueve2               : 41 42
one_par              : 119
p2                   : 1
p3                   : 1 6
p_arc                : 120
p_fill               : 44 47 48 49 50
p_width              : 122
pen                  : 128
penwrite             : 125
poly                 : 117
position             : 124
prelistAss           : 93
prog                 : 0
rect                 : 115
rep                  : 132
rep3                 : 78
stExp                : 102 103
term                 : 61 67
term2                : 66
term3                : 67
tipeAss              : 83
tria                 : 116
type                 : 18 21 93
val                  : 97
valExp               : 74
var2                 : 19 21
var3                 : 21
var33                : 23 24
var4                 : 23 24
var5                 : 19 28
varAss               : 84
vars                 : 3 8 11

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . PR p2 p3 main mainVDir block

    PR              shift and go to state 1

    prog                           shift and go to state 2

state 1

    (1) prog -> PR . p2 p3 main mainVDir block
    (4) p2 -> . globals
    (5) p2 -> . empty
    (8) globals -> . glob vars
    (133) empty -> .
    (9) glob -> . GL

    FUN             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)
    GL              shift and go to state 4

    p2                             shift and go to state 3
    glob                           shift and go to state 5
    globals                        shift and go to state 6
    empty                          shift and go to state 7

state 2

    (0) S' -> prog .



state 3

    (1) prog -> PR p2 . p3 main mainVDir block
    (6) p3 -> . functions p3
    (7) p3 -> . empty
    (10) functions -> . fun2 DP funVDir block
    (133) empty -> .
    (12) fun2 -> . funBlock ID LP fun3 RP
    (13) funBlock -> . FUN

    MAIN            reduce using rule 133 (empty -> .)
    FUN             shift and go to state 12

    p3                             shift and go to state 9
    functions                      shift and go to state 8
    fun2                           shift and go to state 10
    empty                          shift and go to state 11
    funBlock                       shift and go to state 13

state 4

    (9) glob -> GL .

    V               reduce using rule 9 (glob -> GL .)
    FUN             reduce using rule 9 (glob -> GL .)
    MAIN            reduce using rule 9 (glob -> GL .)


state 5

    (8) globals -> glob . vars
    (19) vars -> . V var2 var5
    (20) vars -> . empty
    (133) empty -> .

    V               shift and go to state 15
    FUN             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)

    empty                          shift and go to state 16
    vars                           shift and go to state 14

state 6

    (4) p2 -> globals .

    FUN             reduce using rule 4 (p2 -> globals .)
    MAIN            reduce using rule 4 (p2 -> globals .)


state 7

    (5) p2 -> empty .

    FUN             reduce using rule 5 (p2 -> empty .)
    MAIN            reduce using rule 5 (p2 -> empty .)


state 8

    (6) p3 -> functions . p3
    (6) p3 -> . functions p3
    (7) p3 -> . empty
    (10) functions -> . fun2 DP funVDir block
    (133) empty -> .
    (12) fun2 -> . funBlock ID LP fun3 RP
    (13) funBlock -> . FUN

    MAIN            reduce using rule 133 (empty -> .)
    FUN             shift and go to state 12

    p3                             shift and go to state 17
    functions                      shift and go to state 8
    fun2                           shift and go to state 10
    empty                          shift and go to state 11
    funBlock                       shift and go to state 13

state 9

    (1) prog -> PR p2 p3 . main mainVDir block
    (2) main -> . MAIN

    MAIN            shift and go to state 18

    main                           shift and go to state 19

state 10

    (10) functions -> fun2 . DP funVDir block

    DP              shift and go to state 20


state 11

    (7) p3 -> empty .

    MAIN            reduce using rule 7 (p3 -> empty .)


state 12

    (13) funBlock -> FUN .

    ID              reduce using rule 13 (funBlock -> FUN .)


state 13

    (12) fun2 -> funBlock . ID LP fun3 RP

    ID              shift and go to state 21


state 14

    (8) globals -> glob vars .

    FUN             reduce using rule 8 (globals -> glob vars .)
    MAIN            reduce using rule 8 (globals -> glob vars .)


state 15

    (19) vars -> V . var2 var5
    (21) var2 -> . type var3 SC var2
    (22) var2 -> . empty
    (30) type -> . INT
    (31) type -> . FLOAT
    (133) empty -> .

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    L               reduce using rule 133 (empty -> .)
    FUN             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)
    LB              reduce using rule 133 (empty -> .)

    type                           shift and go to state 25
    empty                          shift and go to state 26
    var2                           shift and go to state 22

state 16

    (20) vars -> empty .

    LB              reduce using rule 20 (vars -> empty .)
    FUN             reduce using rule 20 (vars -> empty .)
    MAIN            reduce using rule 20 (vars -> empty .)


state 17

    (6) p3 -> functions p3 .

    MAIN            reduce using rule 6 (p3 -> functions p3 .)


state 18

    (2) main -> MAIN .

    V               reduce using rule 2 (main -> MAIN .)
    LB              reduce using rule 2 (main -> MAIN .)


state 19

    (1) prog -> PR p2 p3 main . mainVDir block
    (3) mainVDir -> . vars
    (19) vars -> . V var2 var5
    (20) vars -> . empty
    (133) empty -> .

    V               shift and go to state 15
    LB              reduce using rule 133 (empty -> .)

    vars                           shift and go to state 27
    mainVDir                       shift and go to state 28
    empty                          shift and go to state 16

state 20

    (10) functions -> fun2 DP . funVDir block
    (11) funVDir -> . vars
    (19) vars -> . V var2 var5
    (20) vars -> . empty
    (133) empty -> .

    V               shift and go to state 15
    LB              reduce using rule 133 (empty -> .)

    vars                           shift and go to state 29
    empty                          shift and go to state 16
    funVDir                        shift and go to state 30

state 21

    (12) fun2 -> funBlock ID . LP fun3 RP

    LP              shift and go to state 31


state 22

    (19) vars -> V var2 . var5
    (28) var5 -> . list var5
    (29) var5 -> . empty
    (93) list -> . L type ID prelistAss
    (133) empty -> .

    L               shift and go to state 34
    FUN             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)
    LB              reduce using rule 133 (empty -> .)

    var5                           shift and go to state 32
    list                           shift and go to state 33
    empty                          shift and go to state 35

state 23

    (30) type -> INT .

    ID              reduce using rule 30 (type -> INT .)


state 24

    (31) type -> FLOAT .

    ID              reduce using rule 31 (type -> FLOAT .)


state 25

    (21) var2 -> type . var3 SC var2
    (23) var3 -> . ID var4 var33

    ID              shift and go to state 37

    var3                           shift and go to state 36

state 26

    (22) var2 -> empty .

    L               reduce using rule 22 (var2 -> empty .)
    FUN             reduce using rule 22 (var2 -> empty .)
    MAIN            reduce using rule 22 (var2 -> empty .)
    LB              reduce using rule 22 (var2 -> empty .)


state 27

    (3) mainVDir -> vars .

    LB              reduce using rule 3 (mainVDir -> vars .)


state 28

    (1) prog -> PR p2 p3 main mainVDir . block
    (112) block -> . LB block3 RB

    LB              shift and go to state 38

    block                          shift and go to state 39

state 29

    (11) funVDir -> vars .

    LB              reduce using rule 11 (funVDir -> vars .)


state 30

    (10) functions -> fun2 DP funVDir . block
    (112) block -> . LB block3 RB

    LB              shift and go to state 38

    block                          shift and go to state 40

state 31

    (12) fun2 -> funBlock ID LP . fun3 RP
    (14) fun3 -> . fun5 fun4
    (15) fun3 -> . empty
    (18) fun5 -> . type ID
    (133) empty -> .
    (30) type -> . INT
    (31) type -> . FLOAT

    RP              reduce using rule 133 (empty -> .)
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    fun5                           shift and go to state 41
    fun3                           shift and go to state 42
    type                           shift and go to state 43
    empty                          shift and go to state 44

state 32

    (19) vars -> V var2 var5 .

    LB              reduce using rule 19 (vars -> V var2 var5 .)
    FUN             reduce using rule 19 (vars -> V var2 var5 .)
    MAIN            reduce using rule 19 (vars -> V var2 var5 .)


state 33

    (28) var5 -> list . var5
    (28) var5 -> . list var5
    (29) var5 -> . empty
    (93) list -> . L type ID prelistAss
    (133) empty -> .

    L               shift and go to state 34
    FUN             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)
    LB              reduce using rule 133 (empty -> .)

    var5                           shift and go to state 45
    list                           shift and go to state 33
    empty                          shift and go to state 35

state 34

    (93) list -> L . type ID prelistAss
    (30) type -> . INT
    (31) type -> . FLOAT

    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    type                           shift and go to state 46

state 35

    (29) var5 -> empty .

    FUN             reduce using rule 29 (var5 -> empty .)
    MAIN            reduce using rule 29 (var5 -> empty .)
    LB              reduce using rule 29 (var5 -> empty .)


state 36

    (21) var2 -> type var3 . SC var2

    SC              shift and go to state 47


state 37

    (23) var3 -> ID . var4 var33
    (26) var4 -> . EQ exp
    (27) var4 -> . empty
    (133) empty -> .

    EQ              shift and go to state 49
    C               reduce using rule 133 (empty -> .)
    SC              reduce using rule 133 (empty -> .)

    var4                           shift and go to state 48
    empty                          shift and go to state 50

state 38

    (112) block -> LB . block3 RB
    (113) block3 -> . block2 block3
    (114) block3 -> . empty
    (126) block2 -> . figure
    (127) block2 -> . condition
    (128) block2 -> . pen
    (129) block2 -> . lab
    (130) block2 -> . list
    (131) block2 -> . WID
    (132) block2 -> . rep
    (133) empty -> .
    (115) figure -> . rect
    (116) figure -> . tria
    (117) figure -> . poly
    (118) figure -> . lstrip
    (119) figure -> . one_par
    (120) figure -> . p_arc
    (107) condition -> . IF LP expresion condRP block con2
    (121) pen -> . colors
    (122) pen -> . p_width
    (123) pen -> . move
    (124) pen -> . position
    (125) pen -> . penwrite
    (102) lab -> . LA LP stExp lab2 RP SC
    (93) list -> . L type ID prelistAss
    (80) WID -> . ID WID2
    (78) rep -> . RE rep3 block
    (44) rect -> . REC LP exp C exp p_fill RP SC
    (47) tria -> . TRI LP exp C exp C exp p_fill RP SC
    (50) poly -> . POL LP idList p_fill RP SC
    (51) lstrip -> . LS LP idList RP SC
    (48) one_par -> . CIR LP exp p_fill RP SC
    (49) one_par -> . SQ LP exp p_fill RP SC
    (53) p_arc -> . ARC LP exp RP SC
    (35) colors -> . PENC LP exp C exp C exp RP SC
    (36) colors -> . SETC LP exp C exp C exp RP SC
    (37) colors -> . BACO LP exp C exp C exp RP SC
    (38) p_width -> . PENW LP exp RP SC
    (41) move -> . F mueve2
    (42) move -> . B mueve2
    (34) position -> . PENP LP exp C exp RP SC
    (39) penwrite -> . PENU SC
    (40) penwrite -> . PEND SC

    RB              reduce using rule 133 (empty -> .)
    IF              shift and go to state 81
    LA              shift and go to state 64
    L               shift and go to state 34
    ID              shift and go to state 79
    RE              shift and go to state 67
    REC             shift and go to state 61
    TRI             shift and go to state 74
    POL             shift and go to state 66
    LS              shift and go to state 73
    CIR             shift and go to state 84
    SQ              shift and go to state 85
    ARC             shift and go to state 88
    PENC            shift and go to state 70
    SETC            shift and go to state 86
    BACO            shift and go to state 56
    PENW            shift and go to state 62
    F               shift and go to state 76
    B               shift and go to state 75
    PENP            shift and go to state 51
    PENU            shift and go to state 63
    PEND            shift and go to state 69

    block3                         shift and go to state 52
    block2                         shift and go to state 53
    figure                         shift and go to state 54
    lstrip                         shift and go to state 55
    move                           shift and go to state 57
    tria                           shift and go to state 58
    poly                           shift and go to state 59
    colors                         shift and go to state 60
    rep                            shift and go to state 65
    pen                            shift and go to state 68
    condition                      shift and go to state 71
    empty                          shift and go to state 72
    lab                            shift and go to state 77
    one_par                        shift and go to state 78
    rect                           shift and go to state 80
    WID                            shift and go to state 82
    p_arc                          shift and go to state 83
    list                           shift and go to state 87
    position                       shift and go to state 89
    p_width                        shift and go to state 90
    penwrite                       shift and go to state 91

state 39
